--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,14 @@
 {
     "llm_config": {
-        "model": "openai/gpt-4-turbo",
+        "model": "openai/gpt-3.5-turbo",
         "max_tokens": 2048,
         "temperature": 0.7,
         "top_p": 1.0
     },
     "local_config": {
-        "tryb": "testowy",
+        "tryb": "prezentacja",
         "styl": "precyzyjny",
-        "stt": "vosk",
-        "tts": "pyttsx3"
+        "stt": "faster_whisper",
+        "tts": "coqui"
     }
 }
