feat: Dodano system logowania, pamięci i Edge-TTS
- Zintegrowano nowoczesny system logowania rozmów do SQLite
- Dodano Edge-TTS jako nowy silnik TTS z polskimi głosami
- Rozbudowano GUI o konfigurację Edge-TTS
- Modernizacja systemu rozpoznawania intencji
- Usprawnienia modułów STT i LLM

NOWE PLIKI:
* tts/tts_edge.py - Nowy moduł TTS używający Microsoft Edge-TTS
  - Obsługa 3 polskich głosów (Zofia, Marek, Agnieszka)
  - Asynchroniczna generacja mowy z lepszą wydajnością
  - Konfigurowalny przez config.json
  - Lepsze error handling i logowanie

* core/pamiec.py - Nowoczesny system zarządzania danymi w SQLite
  - 3 bazy danych: historia rozmów, wiadomości, analytics
  - Context managers dla bezpiecznych połączeń DB
  - UUID dla unikalnych identyfikatorów
  - Soft delete dla wiadomości
  - Kompatybilność wsteczna z prototypem

* core/logger.py - Centralny system logowania wszystkich aktywności
  - Logowanie rozmów z metadanymi (czas, model, intencja)
  - Śledzenie użycia komponentów (STT/TTS/LLM)
  - Sesje rozmowy dla grupowania interakcji
  - Analytics i metryki systemu

* core/__init__.py - Pusty plik inicjalizacyjny dla pakietu core

ZMODYFIKOWANE PLIKI:
* interface/config_gui.py
  - Dodano Edge-TTS do listy opcji TTS
  - Nowa sekcja konfiguracji głosów polskich dla Edge-TTS
  - Przycisk testowania głosu
  - Zapis ustawień edge_voice do konfiguracji
  - Lepsze error handling przy nieznanych TTS
  - Reset stanu po uruchomieniu AIA

* core/rozumienie.py
  - Integracja z systemem logowania
  - Pełne logowanie wszystkich rozmów (intencje + LLM)
  - Logowanie błędów i problemów
  - Nowe intencje: zapisz_wiadomosc, odczytaj_wiadomosc, przeglad_wiadomosci
  - Lepsze error handling z fallback messages
  - Tracking czasu odpowiedzi
  - Metadata dla każdej rozmowy

* main.py
  - Import i integracja core.logger
  - Dodano obsługę Edge-TTS w sekcji TTS
  - Logowanie użycia komponentów STT/TTS
  - Rozbudowane tryby działania (prezentacja, domowy, alarmowy)
  - Error handling 

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,40 @@
-# Pliki i foldery z konfiguracją lokalną
-config/secure.json
+# === Python cache ===
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
 
-# Środowisko wirtualne
+# === Virtual environments ===
 venv/
 .venv/
 
-# Cache Pythona
-__pycache__/
-*.pyc
-
-# Streamlit secrets (jeśli kiedyś użyjesz)
-.streamlit/secrets.toml
-
-# IDE (opcjonalnie)
+# === IDE and editor settings ===
 .vscode/
 .idea/
+
+# === Model and audio data ===
+models/
+*.wav
+*.mp3
+*.tmp
+
+# === Local databases and logs ===
+*.log
+*.sqlite3
+
+# === Configuration (prywatne dane) ===
+config/secure.json
+.streamlit/secrets.toml
+
+# === OS-specific ===
+.DS_Store
+Thumbs.db
+
+# === Temporary or backup files ===
+*.bak
+*.old
+*.swp
+
+# === Database files (local data) ===
+data/db/
+*.db
