feat: System RAG przepisów + dynamiczne zarządzanie tokenami LLM

--- a/config/config.json
+++ b/config/config.json
@@ -10,6 +10,6 @@
         "styl": "precyzyjny",
         "stt": "faster_whisper",
         "tts": "edge",
-        "edge_voice": "zofia"
+        "edge_voice": "marek"
     }
 }
