feat: Add Ollama support + Intent Recognition system
🦙 Ollama Integration:
- Add llm/llm_ollama.py - complete Ollama interface
- Provider switcher in rozumienie.py (OpenRouter ↔ Ollama)
- Automatic fallback when OpenRouter out of credits

🎛️ Intent Recognition Methods:
- IntentRecognizer class with 3 methods
- regex_only, regex_plus_simple, regex_plus_few_shot
- Token Manager for automatic API limits

🖥️ GUI Improvements:
- Provider selector (OpenRouter vs Ollama)
- Dynamic Ollama model detection
- Simplified interface

🔧 Technical:
- Unified config system
- Better error handling
- TTS prefix cleaning for Ollama

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+cat > .gitignore << 'EOF'
 # === Python cache ===
 __pycache__/
 *.py[cod]
@@ -38,3 +39,21 @@ Thumbs.db
 # === Database files (local data) ===
 data/db/
 *.db
+
+# === Token cache (auto-generated) ===
+data/token_limits.json
+
+# === Backup files i notebook versions ===
+*_backup.py
+*_notebook.py
+interface/config_gui_notebook.py
+
+# === Future features (work in progress) ===
+core/recognizers/
+
+# === Temporary/duplicate folders ===
+config/config/
+EOF
+
+# === Token cache ===
+data/token_limits.json
