feat: Add Universal Intelligent Assistant with auto-context detection
- Implement universal flow: STT → LLM Post-processing → LLM + RAG → Response
- Add auto-context detection (cooking, smart_home, calendar, finance, general)
- Add graceful RAG fallback when no data found
- Maintain backward compatibility with classic system
- Support both Ollama and OpenRouter providers

Files modified:
- main.py: Enhanced with Universal Assistant integration
- core/rozumienie.py: Hybrid system with Universal/Classic switcher
- core/stt_processor.py: Multi-context STT post-processing
- core/universal_intelligent_assistant.py: Core Universal system

Key features:
- Context-aware processing for 5 domains
- Automatic fallback layers for error resilience
- Zero breaking changes - full backward compatibility
- Infinitely extensible RAG system

--- a/config/config.json
+++ b/config/config.json
@@ -15,7 +15,7 @@
         "edge_voice": "marek"
     },
     "recognition_config": {
-        "method": "regex_plus_few_shot",
+        "method": "regex_plus_simple",
         "confidence_threshold": 0.7,
         "use_context": true,
         "debug_mode": false
